Update tasks from web app

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,27 @@
-
+[
+  {
+    "id": "1",
+    "text": "浏览任务需求",
+    "completed": false
+  },
+  {
+    "id": "2",
+    "text": "设计双栏布局",
+    "completed": false
+  },
+  {
+    "id": "3",
+    "text": "实现添加任务弹窗",
+    "completed": true
+  },
+  {
+    "id": "4",
+    "text": "测试编辑/删除功能",
+    "completed": true
+  },
+  {
+    "id": "5",
+    "text": "避免通知框",
+    "completed": false
+  }
+]
