--- a/tasks_data.json
+++ b/tasks_data.json
@@ -1,5 +1,10 @@
 {
-  "tasks": [],
-  "syncTime": "2026-02-23T14:31:36.800Z",
-  "version": "1.0.0"
+  "tasks": [
+    {
+      "id": 1771857397023,
+      "name": "你好",
+      "completed": false
+    }
+  ],
+  "time": "2026-02-23T14:36:37.500Z"
 }
