--- a/tasks_data.json
+++ b/tasks_data.json
@@ -3,8 +3,8 @@
     {
       "id": 1771857397023,
       "name": "你好",
-      "completed": false
+      "completed": true
     }
   ],
-  "time": "2026-02-23T14:36:37.500Z"
+  "time": "2026-02-23T14:39:58.740Z"
 }
