--- a/tasks_data.json
+++ b/tasks_data.json
@@ -6,12 +6,6 @@
       "completed": true
     }
   ],
-  "notes": [
-    {
-      "id": 1771858081084,
-      "content": "你好呀",
-      "timestamp": 1771858081084
-    }
-  ],
-  "time": "2026-02-23T14:48:01.089Z"
+  "notes": [],
+  "time": "2026-02-23T14:48:56.307Z"
 }
