--- a/tasks_data.json
+++ b/tasks_data.json
@@ -6,6 +6,12 @@
       "completed": true
     }
   ],
-  "notes": [],
-  "time": "2026-02-23T14:48:56.307Z"
+  "notes": [
+    {
+      "id": 1771858146592,
+      "content": "这是我的留言啊哈哈",
+      "timestamp": 1771858146592
+    }
+  ],
+  "time": "2026-02-23T14:49:07.253Z"
 }
