--- a/tasks_data.json
+++ b/tasks_data.json
@@ -9,6 +9,11 @@
       "id": 1771858680809,
       "name": "睡觉",
       "completed": false
+    },
+    {
+      "id": 1771858703279,
+      "name": "洗鼻子",
+      "completed": false
     }
   ],
   "notes": [
@@ -18,5 +23,5 @@
       "timestamp": 1771858146592
     }
   ],
-  "time": "2026-02-23T14:58:00.821Z"
+  "time": "2026-02-23T14:58:24.770Z"
 }
