--- a/tasks_data.json
+++ b/tasks_data.json
@@ -8,7 +8,7 @@
     {
       "id": 1771858680809,
       "name": "睡觉",
-      "completed": false
+      "completed": true
     },
     {
       "id": 1771858703279,
@@ -23,5 +23,5 @@
       "timestamp": 1771858146592
     }
   ],
-  "time": "2026-02-23T14:58:24.770Z"
+  "time": "2026-02-23T14:58:37.634Z"
 }
