--- a/tasks_data.json
+++ b/tasks_data.json
@@ -13,7 +13,7 @@
     {
       "id": 1771858703279,
       "name": "洗鼻子",
-      "completed": false
+      "completed": true
     }
   ],
   "notes": [
@@ -21,12 +21,7 @@
       "id": 1771858146592,
       "content": "这是我的留言啊哈哈",
       "timestamp": 1771858146592
-    },
-    {
-      "id": 1771858730215,
-      "content": "你好呀",
-      "timestamp": 1771858730215
     }
   ],
-  "time": "2026-02-23T14:58:50.917Z"
+  "time": "2026-02-23T15:14:20.488Z"
 }
