--- a/tasks_data.json
+++ b/tasks_data.json
@@ -16,12 +16,6 @@
       "completed": true
     }
   ],
-  "notes": [
-    {
-      "id": 1771890825483,
-      "content": "https://cn.bing.com/search?q=task.rth&form=APIPA1&PC=APPD&adlt=strict&rdr=1&rdrig=A148F118A8A1489297859B92567C6E09",
-      "timestamp": 1771890825483
-    }
-  ],
-  "time": "2026-02-24T02:49:55.796Z"
+  "notes": [],
+  "time": "2026-02-24T02:50:00.473Z"
 }
