--- a/tasks_data.json
+++ b/tasks_data.json
@@ -13,9 +13,8 @@
     {
       "id": 1771858703279,
       "name": "洗鼻子",
-      "completed": true
+      "completed": false
     }
   ],
-  "notes": [],
-  "time": "2026-02-24T02:50:00.473Z"
+  "time": "2026-02-24T02:51:23.699Z"
 }
