--- a/tasks_data.json
+++ b/tasks_data.json
@@ -16,5 +16,11 @@
       "completed": false
     }
   ],
-  "time": "2026-02-24T02:51:23.699Z"
+  "notes": [
+    {
+      "id": 1771901735606,
+      "content": "你好\n啊哈哈"
+    }
+  ],
+  "time": "2026-02-24T02:55:35.614Z"
 }
