手动同步上传

--- a/tasks_data.json
+++ b/tasks_data.json
@@ -16,11 +16,6 @@
       "completed": false
     }
   ],
-  "notes": [
-    {
-      "id": 1771901735606,
-      "content": "你好\n啊哈哈"
-    }
-  ],
-  "time": "2026-02-24T02:55:35.614Z"
+  "time": "2026-02-24T02:58:51.840Z",
+  "syncType": "manual"
 }
