自动同步留言+任务

--- a/tasks_data.json
+++ b/tasks_data.json
@@ -16,6 +16,12 @@
       "completed": false
     }
   ],
-  "time": "2026-02-24T02:58:51.840Z",
-  "syncType": "manual"
+  "messages": [
+    {
+      "id": 1771902278123,
+      "text": "你好呀",
+      "createdAt": "2026-02-24T03:04:38.123Z"
+    }
+  ],
+  "time": "2026-02-24T03:04:38.126Z"
 }
