--- a/tasks_data.json
+++ b/tasks_data.json
@@ -13,7 +13,7 @@
     {
       "id": 1771858703279,
       "name": "洗鼻子",
-      "completed": false
+      "completed": true
     },
     {
       "id": 1771902610986,
@@ -23,5 +23,5 @@
       "deadline": "2026-02-25"
     }
   ],
-  "time": "2026-02-24T03:10:53.793Z"
+  "time": "2026-02-24T04:16:49.239Z"
 }
