--- a/tasks_data.json
+++ b/tasks_data.json
@@ -3,7 +3,7 @@
     {
       "id": 1771857397023,
       "name": "你好",
-      "completed": true
+      "completed": false
     },
     {
       "id": 1771858680809,
@@ -23,5 +23,5 @@
       "deadline": "2026-02-25"
     }
   ],
-  "time": "2026-02-24T04:19:14.539Z"
+  "time": "2026-02-24T04:27:59.845Z"
 }
