--- a/tasks_data.json
+++ b/tasks_data.json
@@ -3,11 +3,11 @@
     {
       "id": 1771902610986,
       "name": "啊啊啊",
-      "completed": false,
+      "completed": true,
       "time": 20,
       "deadline": "2026-02-25",
       "start": "2026-02-24"
     }
   ],
-  "time": "2026-02-24T05:06:07.929Z"
+  "time": "2026-02-24T05:06:14.078Z"
 }
