--- a/tasks_data.json
+++ b/tasks_data.json
@@ -9,5 +9,6 @@
       "start": "2026-02-24"
     }
   ],
-  "time": "2026-02-24T05:07:48.492Z"
+  "time": "2026-02-24T05:23:32.673Z",
+  "syncType": "manual"
 }
