--- a/tasks_data.json
+++ b/tasks_data.json
@@ -3,12 +3,11 @@
     {
       "id": 1771902610986,
       "name": "啊啊啊",
-      "completed": true,
+      "completed": false,
       "time": 20,
       "deadline": "2026-02-25",
       "start": "2026-02-24"
     }
   ],
-  "time": "2026-02-24T05:23:32.673Z",
-  "syncType": "manual"
+  "time": "2026-02-24T05:36:14.564Z"
 }
