手动同步上传

--- a/tasks_data.json
+++ b/tasks_data.json
@@ -9,5 +9,6 @@
       "start": "2026-02-24"
     }
   ],
-  "time": "2026-02-24T05:47:22.761Z"
+  "time": "2026-02-24T05:47:43.449Z",
+  "syncType": "manual"
 }
