--- a/tasks_data.json
+++ b/tasks_data.json
@@ -7,10 +7,10 @@
       "time": 20,
       "deadline": "2026-02-25",
       "start": "2026-02-24",
-      "isCounting": true,
+      "isCounting": false,
       "countdownStartTime": 1771912668227,
-      "countdownRemaining": 1125
+      "countdownRemaining": 1057
     }
   ],
-  "time": "2026-02-24T05:59:03.895Z"
+  "time": "2026-02-24T05:59:07.795Z"
 }
