--- a/tasks_data.json
+++ b/tasks_data.json
@@ -7,10 +7,10 @@
       "time": 20,
       "deadline": "2026-02-25",
       "start": "2026-02-24",
-      "isCounting": false,
-      "countdownStartTime": 1771912668227,
+      "isCounting": true,
+      "countdownStartTime": 1771912886436,
       "countdownRemaining": 1057
     }
   ],
-  "time": "2026-02-24T05:59:07.795Z"
+  "time": "2026-02-24T06:01:26.438Z"
 }
