--- a/tasks_data.json
+++ b/tasks_data.json
@@ -7,10 +7,10 @@
       "time": 20,
       "deadline": "2026-02-25",
       "start": "2026-02-24",
-      "isCounting": false,
-      "countdownStartTime": 1771912886436,
+      "isCounting": true,
+      "countdownStartTime": 1771913014317,
       "countdownRemaining": 861
     }
   ],
-  "time": "2026-02-24T06:03:21.160Z"
+  "time": "2026-02-24T06:03:34.675Z"
 }
