--- a/tasks_data.json
+++ b/tasks_data.json
@@ -1,13 +1,4 @@
 {
-  "tasks": [
-    {
-      "id": 1771902610986,
-      "name": "啊啊啊",
-      "completed": true,
-      "time": 20,
-      "deadline": "2026-02-25",
-      "start": "2026-02-24"
-    }
-  ],
-  "time": "2026-02-24T06:57:54.608Z"
+  "tasks": [],
+  "time": "2026-02-24T06:58:01.948Z"
 }
