--- a/tasks_data.json
+++ b/tasks_data.json
@@ -1,24 +1,4 @@
 {
-  "tasks": [
-    {
-      "id": 1771902610986,
-      "name": "啊啊啊",
-      "completed": true,
-      "time": 20,
-      "deadline": "2026-02-25",
-      "start": "2026-02-24",
-      "isCounting": false,
-      "countdownStartTime": 1771917128202,
-      "countdownRemaining": 718,
-      "countdownRunning": true,
-      "countdownDuration": 1200,
-      "countdown": {
-        "totalSeconds": 1200,
-        "remainingSeconds": 1200,
-        "startTime": null,
-        "isRunning": false
-      }
-    }
-  ],
-  "time": "2026-02-24T07:13:19.314Z"
+  "tasks": [],
+  "time": "2026-02-24T07:13:26.797Z"
 }
