--- a/tasks_data.json
+++ b/tasks_data.json
@@ -6,13 +6,13 @@
       "completed": false,
       "countdown": {
         "totalSeconds": 120,
-        "remainingSeconds": 120,
+        "remainingSeconds": 0,
         "startTime": 1771917231423,
-        "isRunning": true
+        "isRunning": false
       },
       "start": "2026-02-24",
       "time": 2
     }
   ],
-  "time": "2026-02-24T07:13:52.052Z"
+  "time": "2026-02-24T07:15:48.520Z"
 }
