--- a/tasks_data.json
+++ b/tasks_data.json
@@ -7,12 +7,12 @@
       "countdown": {
         "totalSeconds": 120,
         "remainingSeconds": 120,
-        "startTime": null,
-        "isRunning": false
+        "startTime": 1771918536198,
+        "isRunning": true
       },
       "start": "2026-02-24",
       "time": 2
     }
   ],
-  "time": "2026-02-24T07:35:33.751Z"
+  "time": "2026-02-24T07:35:36.627Z"
 }
