--- a/tasks_data.json
+++ b/tasks_data.json
@@ -6,13 +6,13 @@
       "completed": false,
       "countdown": {
         "totalSeconds": 120,
-        "remainingSeconds": 120,
-        "startTime": 1771919295640,
-        "isRunning": true
+        "remainingSeconds": 0,
+        "startTime": null,
+        "isRunning": false
       },
       "start": "2026-02-24",
       "time": 2
     }
   ],
-  "time": "2026-02-24T07:48:15.946Z"
+  "time": "2026-02-24T07:50:16.356Z"
 }
