--- a/tasks_data.json
+++ b/tasks_data.json
@@ -3,7 +3,7 @@
     {
       "id": 1771917221821,
       "name": "wuwuwu",
-      "completed": true,
+      "completed": false,
       "countdown": {
         "totalSeconds": 120,
         "remainingSeconds": 120,
@@ -19,5 +19,5 @@
     "scrollPosition": 0,
     "selectedDate": "选择日期查看任务"
   },
-  "time": "2026-02-24T07:57:20.757Z"
+  "time": "2026-02-24T07:57:23.160Z"
 }
