--- a/tasks_data.json
+++ b/tasks_data.json
@@ -14,11 +14,5 @@
       "time": 2
     }
   ],
-  "time": "2026-02-24T08:01:42.493Z",
-  "pageState": {
-    "currentPage": "main-page",
-    "scrollPosition": 0,
-    "selectedDate": "选择日期查看任务",
-    "activeModal": "countdown-modal"
-  }
+  "time": "2026-02-24T08:05:00.978Z"
 }
