--- a/tasks_data.json
+++ b/tasks_data.json
@@ -1,30 +1,24 @@
 {
   "tasks": [
     {
-      "id": 1771920306782,
-      "name": "啊啊啊",
-      "completed": false,
-      "countdown": {
-        "totalSeconds": 900,
-        "remainingSeconds": 900,
-        "startTime": null,
-        "isRunning": false
-      },
-      "start": "2026-02-24"
-    },
-    {
       "id": 1771917221821,
       "name": "wuwuwu",
       "completed": false,
       "countdown": {
         "totalSeconds": 120,
-        "remainingSeconds": 120,
-        "startTime": 1771920093457,
-        "isRunning": true
+        "remainingSeconds": 0,
+        "startTime": null,
+        "isRunning": false
       },
       "start": "2026-02-24",
       "time": 2
     }
   ],
-  "time": "2026-02-24T08:07:06.728Z"
+  "time": "2026-02-24T08:08:00.370Z",
+  "pageState": {
+    "currentPage": "main-page",
+    "scrollPosition": 0,
+    "selectedDate": "选择日期查看任务",
+    "activeModal": "countdown-modal"
+  }
 }
