--- a/tasks_data.json
+++ b/tasks_data.json
@@ -3,7 +3,7 @@
     {
       "id": 1771917221821,
       "name": "wuwuwu",
-      "completed": false,
+      "completed": true,
       "countdown": {
         "totalSeconds": 120,
         "remainingSeconds": 0,
@@ -11,14 +11,9 @@
         "isRunning": false
       },
       "start": "2026-02-24",
-      "time": 2
+      "time": 2,
+      "actualTime": 1
     }
   ],
-  "time": "2026-02-24T08:08:00.370Z",
-  "pageState": {
-    "currentPage": "main-page",
-    "scrollPosition": 0,
-    "selectedDate": "选择日期查看任务",
-    "activeModal": "countdown-modal"
-  }
+  "time": "2026-02-24T08:31:35.444Z"
 }
