--- a/tasks_data.json
+++ b/tasks_data.json
@@ -17,16 +17,18 @@
     {
       "id": 1771923945332,
       "name": "你好",
-      "completed": false,
+      "completed": true,
       "countdown": {
         "totalSeconds": 600,
-        "remainingSeconds": 600,
+        "remainingSeconds": 0,
         "startTime": null,
         "isRunning": false
       },
       "start": "2026-02-24",
-      "time": 10
+      "time": 10,
+      "completedAt": "2026-02-24T09:05:48.127Z",
+      "actualTime": 13
     }
   ],
-  "time": "2026-02-24T09:05:45.650Z"
+  "time": "2026-02-24T09:05:51.488Z"
 }
