--- a/tasks_data.json
+++ b/tasks_data.json
@@ -32,16 +32,18 @@
     {
       "id": 1771923982364,
       "name": "改作文",
-      "completed": false,
+      "completed": true,
       "countdown": {
         "totalSeconds": 1380,
-        "remainingSeconds": 1380,
+        "remainingSeconds": 0,
         "startTime": null,
         "isRunning": false
       },
       "start": "2026-02-24",
-      "time": 23
+      "time": 23,
+      "completedAt": "2026-02-24T09:06:26.678Z",
+      "actualTime": 20
     }
   ],
-  "time": "2026-02-24T09:06:23.141Z"
+  "time": "2026-02-24T09:06:30.926Z"
 }
