--- a/tasks_data.json
+++ b/tasks_data.json
@@ -31,11 +31,11 @@
     },
     {
       "id": 1771923982364,
-      "name": "改作文",
+      "name": "啊哈哈",
       "completed": true,
       "countdown": {
         "totalSeconds": 1380,
-        "remainingSeconds": 0,
+        "remainingSeconds": 1380,
         "startTime": null,
         "isRunning": false
       },
@@ -45,5 +45,5 @@
       "actualTime": 20
     }
   ],
-  "time": "2026-02-24T09:06:30.926Z"
+  "time": "2026-02-24T09:15:19.573Z"
 }
