--- a/tasks_data.json
+++ b/tasks_data.json
@@ -52,8 +52,8 @@
       "type": "info",
       "taskId": 1771923982364,
       "timestamp": "2026-02-24T11:55:26.336Z",
-      "read": false
+      "read": true
     }
   ],
-  "time": "2026-02-24T11:55:26.674Z"
+  "time": "2026-02-24T12:37:45.764Z"
 }
