--- a/tasks_data.json
+++ b/tasks_data.json
@@ -52,9 +52,28 @@
       "actualTime": null,
       "aiSuggestedTime": null,
       "id": 1771938165895
+    },
+    {
+      "name": "化学第4讲ABC 第5讲C",
+      "start": "2026-02-24",
+      "time": 55,
+      "deadline": "2026-02-26",
+      "completed": false,
+      "actualTime": null,
+      "aiSuggestedTime": null,
+      "id": 1771938224859
     }
   ],
   "notifications": [
+    {
+      "id": 1771938224861,
+      "title": "任务添加成功",
+      "message": "已添加新任务：化学第4讲ABC 第5讲C",
+      "type": "success",
+      "taskId": 1771938224861,
+      "timestamp": "2026-02-24T13:03:44.861Z",
+      "read": false
+    },
     {
       "id": 1771938165897,
       "title": "任务添加成功",
@@ -83,5 +102,5 @@
       "read": false
     }
   ],
-  "time": "2026-02-24T13:02:45.908Z"
+  "time": "2026-02-24T13:03:45.706Z"
 }
