--- a/tasks_data.json
+++ b/tasks_data.json
@@ -66,6 +66,15 @@
   ],
   "notifications": [
     {
+      "id": 1771938236717,
+      "title": "任务排序已更新",
+      "message": "您已调整任务顺序",
+      "type": "info",
+      "taskId": null,
+      "timestamp": "2026-02-24T13:03:56.717Z",
+      "read": false
+    },
+    {
       "id": 1771938224861,
       "title": "任务添加成功",
       "message": "已添加新任务：化学第4讲ABC 第5讲C",
@@ -102,5 +111,5 @@
       "read": false
     }
   ],
-  "time": "2026-02-24T13:03:45.706Z"
+  "time": "2026-02-24T13:03:57.224Z"
 }
