--- a/tasks_data.json
+++ b/tasks_data.json
@@ -66,6 +66,15 @@
   ],
   "notifications": [
     {
+      "id": 1771938245023,
+      "title": "任务排序已更新",
+      "message": "您已调整任务顺序",
+      "type": "info",
+      "taskId": null,
+      "timestamp": "2026-02-24T13:04:05.023Z",
+      "read": false
+    },
+    {
       "id": 1771938236717,
       "title": "任务排序已更新",
       "message": "您已调整任务顺序",
@@ -111,5 +120,5 @@
       "read": false
     }
   ],
-  "time": "2026-02-24T13:03:57.224Z"
+  "time": "2026-02-24T13:04:05.520Z"
 }
