--- a/tasks_data.json
+++ b/tasks_data.json
@@ -62,9 +62,28 @@
       "actualTime": null,
       "aiSuggestedTime": null,
       "id": 1771938224859
+    },
+    {
+      "name": "历史",
+      "start": "2026-02-24",
+      "time": 31,
+      "deadline": "2026-02-24",
+      "completed": false,
+      "actualTime": null,
+      "aiSuggestedTime": null,
+      "id": 1771938361329
     }
   ],
   "notifications": [
+    {
+      "id": 1771938361331,
+      "title": "任务添加成功",
+      "message": "已添加新任务：历史",
+      "type": "success",
+      "taskId": 1771938361331,
+      "timestamp": "2026-02-24T13:06:01.331Z",
+      "read": false
+    },
     {
       "id": 1771938245023,
       "title": "任务排序已更新",
@@ -120,5 +139,5 @@
       "read": false
     }
   ],
-  "time": "2026-02-24T13:04:05.520Z"
+  "time": "2026-02-24T13:06:01.343Z"
 }
