--- a/tasks_data.json
+++ b/tasks_data.json
@@ -57,20 +57,6 @@
       "id": 1771938165895
     },
     {
-      "id": 1771923982364,
-      "name": "啊哈哈",
-      "completed": true,
-      "countdown": {
-        "totalSeconds": 1380,
-        "remainingSeconds": 1380,
-        "startTime": null,
-        "isRunning": false
-      },
-      "start": "2026-02-24",
-      "time": 23,
-      "actualTime": 20
-    },
-    {
       "id": 1771923945332,
       "name": "你好",
       "completed": true,
@@ -84,7 +70,21 @@
       "time": 10,
       "completedAt": "2026-02-24T09:05:48.127Z",
       "actualTime": 13
+    },
+    {
+      "id": 1771917221821,
+      "name": "wuwuwu",
+      "completed": true,
+      "countdown": {
+        "totalSeconds": 120,
+        "remainingSeconds": 120,
+        "startTime": null,
+        "isRunning": false
+      },
+      "start": "2026-02-24",
+      "time": 2,
+      "actualTime": 1
     }
   ],
-  "time": "2026-02-24T13:09:29.461Z"
+  "time": "2026-02-24T13:10:01.508Z"
 }
