--- a/tasks_data.json
+++ b/tasks_data.json
@@ -51,11 +51,12 @@
       "start": "2026-02-24",
       "time": 54,
       "deadline": "2026-02-26",
-      "completed": false,
+      "completed": true,
       "actualTime": null,
       "aiSuggestedTime": null,
-      "id": 1771938165895
+      "id": 1771938165895,
+      "completedAt": "2026-02-24T13:16:10.435Z"
     }
   ],
-  "time": "2026-02-24T13:15:53.683Z"
+  "time": "2026-02-24T13:16:10.486Z"
 }
