--- a/tasks_data.json
+++ b/tasks_data.json
@@ -1,7 +1,7 @@
 {
   "tasks": [
     {
-      "name": "跨学科1",
+      "name": "生物跨学科",
       "start": "2026-02-24",
       "time": 56,
       "deadline": "2026-02-25",
@@ -63,5 +63,5 @@
       }
     }
   ],
-  "time": "2026-02-24T13:44:07.233Z"
+  "time": "2026-02-24T13:49:19.739Z"
 }
