--- a/tasks_data.json
+++ b/tasks_data.json
@@ -74,8 +74,11 @@
         "remainingSeconds": 3240,
         "startTime": null,
         "isRunning": false
-      }
+      },
+      "tags": [
+        "化学"
+      ]
     }
   ],
-  "time": "2026-02-24T13:54:53.150Z"
+  "time": "2026-02-24T15:11:06.288Z"
 }
