--- a/tasks_data.json
+++ b/tasks_data.json
@@ -55,11 +55,10 @@
       "start": "2026-02-24",
       "time": 55,
       "deadline": "2026-02-26",
-      "completed": true,
+      "completed": false,
       "actualTime": null,
       "aiSuggestedTime": null,
       "id": 1771938224859,
-      "completedAt": "2026-02-24T15:11:10.355Z",
       "countdown": {
         "totalSeconds": 3300,
         "remainingSeconds": 3300,
@@ -90,5 +89,5 @@
       ]
     }
   ],
-  "time": "2026-02-24T15:11:20.195Z"
+  "time": "2026-02-24T15:11:22.949Z"
 }
