--- a/tasks_data.json
+++ b/tasks_data.json
@@ -19,7 +19,7 @@
       "start": "2026-02-24",
       "time": 56,
       "deadline": "2026-02-25",
-      "completed": false,
+      "completed": true,
       "actualTime": null,
       "aiSuggestedTime": null,
       "id": 1771938402547,
@@ -28,7 +28,11 @@
         "remainingSeconds": 3360,
         "startTime": null,
         "isRunning": false
-      }
+      },
+      "completedAt": "2026-02-24T15:12:12.353Z",
+      "tags": [
+        "生物"
+      ]
     },
     {
       "name": "道法",
@@ -107,5 +111,5 @@
       ]
     }
   ],
-  "time": "2026-02-24T15:12:04.589Z"
+  "time": "2026-02-24T15:12:28.935Z"
 }
