--- a/tasks_data.json
+++ b/tasks_data.json
@@ -19,7 +19,7 @@
       "start": "2026-02-24",
       "time": 56,
       "deadline": "2026-02-25",
-      "completed": true,
+      "completed": false,
       "actualTime": null,
       "aiSuggestedTime": null,
       "id": 1771938402547,
@@ -29,7 +29,6 @@
         "startTime": null,
         "isRunning": false
       },
-      "completedAt": "2026-02-24T15:12:12.353Z",
       "tags": [
         "生物"
       ]
@@ -111,5 +110,5 @@
       ]
     }
   ],
-  "time": "2026-02-24T15:12:28.935Z"
+  "time": "2026-02-24T15:12:32.731Z"
 }
