--- a/tasks_data.json
+++ b/tasks_data.json
@@ -12,7 +12,10 @@
       },
       "start": "2026-02-24",
       "time": 56,
-      "deadline": "2026-02-25"
+      "deadline": "2026-02-25",
+      "tags": [
+        "地理"
+      ]
     },
     {
       "name": "生物跨学科",
@@ -110,5 +113,5 @@
       ]
     }
   ],
-  "time": "2026-02-24T15:12:49.462Z"
+  "time": "2026-02-24T15:12:57.924Z"
 }
