--- a/tasks_data.json
+++ b/tasks_data.json
@@ -48,8 +48,8 @@
       "countdown": {
         "totalSeconds": 3000,
         "remainingSeconds": 3000,
-        "startTime": null,
-        "isRunning": false
+        "startTime": 1771947645364,
+        "isRunning": true
       },
       "tags": [
         "道法"
@@ -113,5 +113,5 @@
       ]
     }
   ],
-  "time": "2026-02-24T15:13:58.959Z"
+  "time": "2026-02-24T15:40:45.656Z"
 }
