--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,7 +111,20 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771949304910,
+      "name": "吃烤乳鸽",
+      "completed": false,
+      "start": "2026-02-25",
+      "deadline": "2026-02-25",
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T15:40:49.708Z"
+  "time": "2026-02-24T16:08:25.659Z"
 }
