--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,7 +111,23 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771949401767,
+      "name": "做化学题",
+      "completed": false,
+      "start": "2026-02-25",
+      "deadline": "2026-02-25",
+      "tags": [
+        "化学"
+      ],
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T16:09:18.617Z"
+  "time": "2026-02-24T16:10:02.715Z"
 }
