--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,7 +111,20 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771950175409,
+      "name": "2月26日 饭店吃烤乳鸽",
+      "completed": false,
+      "start": "2026-02-24",
+      "deadline": "2026-02-24",
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T16:22:37.601Z"
+  "time": "2026-02-24T16:22:56.509Z"
 }
