--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,7 +111,20 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771950197670,
+      "name": "饭店吃烤乳鸽",
+      "completed": false,
+      "start": "2026-02-26",
+      "deadline": "2026-02-26",
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T16:23:03.907Z"
+  "time": "2026-02-24T16:23:18.319Z"
 }
