--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,7 +111,20 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771950261993,
+      "name": "吃烤乳鸽",
+      "completed": false,
+      "start": "2026-02-29",
+      "deadline": "2026-02-30",
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T16:24:04.042Z"
+  "time": "2026-02-24T16:24:23.098Z"
 }
