--- a/tasks_data.json
+++ b/tasks_data.json
@@ -115,9 +115,23 @@
     {
       "id": 1771950261993,
       "name": "吃烤乳鸽",
-      "completed": false,
+      "completed": true,
       "start": "2026-02-29",
       "deadline": "2026-02-30",
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      },
+      "completedAt": "2026-02-24T16:24:26.849Z"
+    },
+    {
+      "id": 1771950276121,
+      "name": "吃烤乳鸽，预估100分钟",
+      "completed": false,
+      "start": "2026-02-25",
+      "deadline": "2026-02-26",
       "countdown": {
         "totalSeconds": 900,
         "remainingSeconds": 900,
@@ -126,5 +140,5 @@
       }
     }
   ],
-  "time": "2026-02-24T16:24:23.098Z"
+  "time": "2026-02-24T16:24:37.290Z"
 }
