--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,7 +111,21 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771950505697,
+      "name": "20号到27号 在饭店吃烤乳鸽",
+      "completed": false,
+      "start": "2026-02-24",
+      "deadline": "2026-02-24",
+      "time": 100,
+      "countdown": {
+        "totalSeconds": 6000,
+        "remainingSeconds": 6000,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T16:26:31.312Z"
+  "time": "2026-02-24T16:28:26.138Z"
 }
