--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,7 +111,21 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771950904111,
+      "name": "吃屎",
+      "completed": false,
+      "start": "2026-02-25",
+      "deadline": "2026-02-25",
+      "time": null,
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T16:33:39.081Z"
+  "time": "2026-02-24T16:35:04.887Z"
 }
