--- a/tasks_data.json
+++ b/tasks_data.json
@@ -22,7 +22,7 @@
       "start": "2026-02-24",
       "time": 56,
       "deadline": "2026-02-25",
-      "completed": false,
+      "completed": true,
       "actualTime": null,
       "aiSuggestedTime": null,
       "id": 1771938402547,
@@ -34,7 +34,8 @@
       },
       "tags": [
         "生物"
-      ]
+      ],
+      "completedAt": "2026-02-24T16:39:39.660Z"
     },
     {
       "name": "道法",
@@ -127,5 +128,5 @@
       }
     }
   ],
-  "time": "2026-02-24T16:38:41.435Z"
+  "time": "2026-02-24T16:39:51.418Z"
 }
