--- a/tasks_data.json
+++ b/tasks_data.json
@@ -126,7 +126,21 @@
         "startTime": null,
         "isRunning": false
       }
+    },
+    {
+      "id": 1771951225866,
+      "name": "吃烤乳鸽、后天吃烤乳鸽1小时",
+      "completed": false,
+      "start": "2026-02-26",
+      "deadline": "2026-02-26",
+      "time": 30,
+      "countdown": {
+        "totalSeconds": 1800,
+        "remainingSeconds": 1800,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T16:39:51.418Z"
+  "time": "2026-02-24T16:40:26.642Z"
 }
