--- a/tasks_data.json
+++ b/tasks_data.json
@@ -22,7 +22,7 @@
       "start": "2026-02-24",
       "time": 56,
       "deadline": "2026-02-25",
-      "completed": true,
+      "completed": false,
       "actualTime": null,
       "aiSuggestedTime": null,
       "id": 1771938402547,
@@ -34,8 +34,7 @@
       },
       "tags": [
         "生物"
-      ],
-      "completedAt": "2026-02-24T16:39:39.660Z"
+      ]
     },
     {
       "name": "道法",
@@ -114,5 +113,5 @@
       ]
     }
   ],
-  "time": "2026-02-24T16:41:44.473Z"
+  "time": "2026-02-24T16:42:18.453Z"
 }
