--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,7 +111,21 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771951726298,
+      "name": "吃烤乳鸽，后天吃烤乳鸽1小时",
+      "completed": false,
+      "start": "2026-02-26",
+      "deadline": "2026-02-26",
+      "time": 30,
+      "countdown": {
+        "totalSeconds": 1800,
+        "remainingSeconds": 1800,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T16:42:18.453Z"
+  "time": "2026-02-24T16:48:46.599Z"
 }
