--- a/tasks_data.json
+++ b/tasks_data.json
@@ -125,7 +125,35 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771952268571,
+      "name": "吃烤乳鸽",
+      "completed": false,
+      "start": "2026-02-26",
+      "deadline": "2026-02-26",
+      "time": 30,
+      "countdown": {
+        "totalSeconds": 1800,
+        "remainingSeconds": 1800,
+        "startTime": null,
+        "isRunning": false
+      }
+    },
+    {
+      "id": 1771952268576,
+      "name": "吃烤乳鸽",
+      "completed": false,
+      "start": "2026-02-27",
+      "deadline": "2026-02-27",
+      "time": 60,
+      "countdown": {
+        "totalSeconds": 3600,
+        "remainingSeconds": 3600,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T16:49:35.840Z"
+  "time": "2026-02-24T16:57:48.884Z"
 }
