--- a/tasks_data.json
+++ b/tasks_data.json
@@ -127,20 +127,6 @@
       ]
     },
     {
-      "id": 1771952268571,
-      "name": "吃烤乳鸽",
-      "completed": false,
-      "start": "2026-02-26",
-      "deadline": "2026-02-26",
-      "time": 30,
-      "countdown": {
-        "totalSeconds": 1800,
-        "remainingSeconds": 1800,
-        "startTime": null,
-        "isRunning": false
-      }
-    },
-    {
       "id": 1771952268576,
       "name": "吃烤乳鸽",
       "completed": false,
@@ -155,6 +141,5 @@
       }
     }
   ],
-  "time": "2026-02-24T16:57:55.905Z",
-  "syncType": "manual"
+  "time": "2026-02-24T16:58:05.311Z"
 }
