--- a/tasks_data.json
+++ b/tasks_data.json
@@ -92,7 +92,24 @@
       "tags": [
         "化学"
       ]
+    },
+    {
+      "id": 1771952480875,
+      "name": "化学自招6",
+      "completed": false,
+      "start": "2026-02-24",
+      "deadline": "2026-02-26",
+      "time": 60,
+      "tags": [
+        "化学"
+      ],
+      "countdown": {
+        "totalSeconds": 3600,
+        "remainingSeconds": 3600,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-24T17:00:58.382Z"
+  "time": "2026-02-24T17:01:21.676Z"
 }
