--- a/tasks_data.json
+++ b/tasks_data.json
@@ -67,8 +67,8 @@
       "countdown": {
         "totalSeconds": 1860,
         "remainingSeconds": 398,
-        "startTime": null,
-        "isRunning": false
+        "startTime": 1771986997535,
+        "isRunning": true
       },
       "tags": [
         "历史"
@@ -111,5 +111,5 @@
       }
     }
   ],
-  "time": "2026-02-25T02:36:34.798Z"
+  "time": "2026-02-25T02:36:37.972Z"
 }
