--- a/tasks_data.json
+++ b/tasks_data.json
@@ -66,9 +66,9 @@
       "id": 1771938361329,
       "countdown": {
         "totalSeconds": 1860,
-        "remainingSeconds": 398,
-        "startTime": 1771986997535,
-        "isRunning": true
+        "remainingSeconds": 306,
+        "startTime": null,
+        "isRunning": false
       },
       "tags": [
         "历史"
@@ -111,5 +111,5 @@
       }
     }
   ],
-  "time": "2026-02-25T02:36:37.972Z"
+  "time": "2026-02-25T02:38:10.518Z"
 }
