--- a/tasks_data.json
+++ b/tasks_data.json
@@ -67,8 +67,8 @@
       "countdown": {
         "totalSeconds": 1860,
         "remainingSeconds": 306,
-        "startTime": null,
-        "isRunning": false
+        "startTime": 1771987118825,
+        "isRunning": true
       },
       "tags": [
         "历史"
@@ -111,5 +111,5 @@
       }
     }
   ],
-  "time": "2026-02-25T02:38:10.518Z"
+  "time": "2026-02-25T02:38:39.206Z"
 }
