--- a/tasks_data.json
+++ b/tasks_data.json
@@ -60,19 +60,20 @@
       "start": "2026-02-24",
       "time": 31,
       "deadline": "2026-02-24",
-      "completed": false,
-      "actualTime": null,
+      "completed": true,
+      "actualTime": 28,
       "aiSuggestedTime": null,
       "id": 1771938361329,
       "countdown": {
         "totalSeconds": 1860,
-        "remainingSeconds": 194,
+        "remainingSeconds": 0,
         "startTime": null,
         "isRunning": false
       },
       "tags": [
         "历史"
-      ]
+      ],
+      "completedAt": "2026-02-25T02:40:39.849Z"
     },
     {
       "name": "化学第4讲ABC 第5讲C",
@@ -111,5 +112,5 @@
       }
     }
   ],
-  "time": "2026-02-25T02:40:32.132Z"
+  "time": "2026-02-25T02:40:50.698Z"
 }
