--- a/tasks_data.json
+++ b/tasks_data.json
@@ -110,7 +110,21 @@
         "startTime": null,
         "isRunning": false
       }
+    },
+    {
+      "id": 1772025881520,
+      "name": "创建 吃屎 标签",
+      "completed": false,
+      "start": "2026-02-25",
+      "deadline": "2026-02-25",
+      "time": null,
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-25T02:48:29.264Z"
+  "time": "2026-02-25T13:24:41.809Z"
 }
