--- a/tasks_data.json
+++ b/tasks_data.json
@@ -110,7 +110,21 @@
         "startTime": null,
         "isRunning": false
       }
+    },
+    {
+      "id": 1772025935969,
+      "name": "吃烤乳鸽，标签是吃",
+      "completed": false,
+      "start": "2026-02-26",
+      "deadline": "2026-02-26",
+      "time": 30,
+      "countdown": {
+        "totalSeconds": 1800,
+        "remainingSeconds": 1800,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-02-25T13:25:00.511Z"
+  "time": "2026-02-25T13:25:36.677Z"
 }
