--- a/tasks_data.json
+++ b/tasks_data.json
@@ -109,8 +109,10 @@
         "remainingSeconds": 3600,
         "startTime": null,
         "isRunning": false
-      }
+      },
+      "priority": "低",
+      "difficulty": "困难"
     }
   ],
-  "time": "2026-02-25T13:26:00.352Z"
+  "time": "2026-02-25T13:26:16.883Z"
 }
