--- a/tasks_data.json
+++ b/tasks_data.json
@@ -92,7 +92,9 @@
       },
       "tags": [
         "化学"
-      ]
+      ],
+      "priority": "低",
+      "difficulty": "困难"
     },
     {
       "id": 1771952480875,
@@ -114,5 +116,5 @@
       "difficulty": "困难"
     }
   ],
-  "time": "2026-02-25T13:26:16.883Z"
+  "time": "2026-02-25T13:26:31.025Z"
 }
