--- a/tasks_data.json
+++ b/tasks_data.json
@@ -53,7 +53,9 @@
       },
       "tags": [
         "道法"
-      ]
+      ],
+      "priority": "高",
+      "difficulty": "简单"
     },
     {
       "name": "历史",
@@ -116,5 +118,5 @@
       "difficulty": "困难"
     }
   ],
-  "time": "2026-02-25T13:26:31.025Z"
+  "time": "2026-02-25T13:26:40.542Z"
 }
